fixed overflow error in the home page

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body,
 	font-family: "Source Sans Pro", sans-serif;
 }
 
+.content {
+	overflow: auto;
+}
+
 .app {
 	display: flex;
 	position: relative;
